--- a/src/main/webapp/CSS/SHpage.css
+++ b/src/main/webapp/CSS/SHpage.css
@@ -30,6 +30,7 @@
   display: flex;
   align-items: center;
   color: #4F709C;
+  text-decoration: none !important;
 }
 .logo img {
   width: 40px; /* 로고 이미지의 크기 조절 */
@@ -38,6 +39,7 @@
 }
 .logo-text {
   font-size: 1.5em;
+  text-decoration: none !important;
 }
 .topheadermenu {
   list-style: none;
