--- a/src/main/webapp/CSS/header1.css
+++ b/src/main/webapp/CSS/header1.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
     margin: 0;
     padding: 0;
@@ -30,6 +31,7 @@
   display: flex;
   align-items: center;
   color: #4F709C;
+  text-decoration: none !important;
 }
 .logo img {
   width: 40px; /* 로고 이미지의 크기 조절 */
@@ -38,6 +40,7 @@
 }
 .logo-text {
   font-size: 1.5em;
+  text-decoration: none !important;
 }
 .topheadermenu {
   list-style: none;
@@ -47,22 +50,31 @@
   margin-left: auto;
   font-size: small;
 }
-.manager {
+.mypage_cart {
     display: flex;
     list-style: none;
     margin-top: 10px;
 }
 
-.manager li {
+.mypage_cart li {
     margin: 0 10px;
 }
-.manager a {
+.cartlogo {
+	width: 8%;
+	height: 8%;
+}
+.mypage_cart a {
   color: black;
   text-decoration: none;
   transition: color 0.3s;
 }
-.manager a:hover {
+.mypage_cart a:hover {
   color: #4F709C;
+}
+.mypage_cart .separator {
+    border-left: 1px solid #000;
+    height: 20px;
+    margin: 0 10px;
 }
 .divider1 {
   width: 100%;
@@ -92,54 +104,4 @@
   	width: 100%;
     height: 150px;
     object-fit: cover;
-}
-.mainpage {
-    justify-content: center;
-    align-items: center;
-}
-.SH-text {
-	padding-top:30px;
-	padding-left:300px
-	
-}
-.divider3 {
-  width: 60%;
-  height: 1px;
-  background-color: gray;
-  margin: 10px 300px;
-}
-.menu_manager {
-    display: flex;
-    justify-content: center;
-}
-
-.SHmenu1, .SHmenu2 {
-	margin: 0 45px;
-    margin-top: 50px;
-    padding: 10px 20px;
-    font-size: 1em;
-    cursor: pointer;
-    width: 230px; /* 버튼 너비 설정 */
-    height: 300px; /* 버튼 높이 설정 */
-    background-color: #FAFAFA; /* 버튼 배경색 설정 */
-    border: none; /* 버튼 테두리 제거 */
-    border-radius: 15px; /* 둥근 테두리 설정 */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 버튼 그림자 설정 */
-}
-.buttoncontainer2 {
-    display: flex;
-    flex-direction: column; /* 세로 방향으로 배치 */
-}
-.SHmenu3, .SHmenu4{
-	margin: 0 30px;
-    margin-top: 50px;
-    padding: 10px 20px;
-    font-size: 1em;
-    cursor: pointer;
-    width: 230px; /* 버튼 너비 설정 */
-    height: 100px; /* 버튼 높이 설정 */
-    background-color: #FAFAFA; /* 버튼 배경색 설정 */
-    border: none; /* 버튼 테두리 제거 */
-    border-radius: 15px; /* 둥근 테두리 설정 */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 버튼 그림자 설정 */
 }
