--- a/src/main/webapp/CSS/SHpage.css
+++ b/src/main/webapp/CSS/SHpage.css
@@ -151,10 +151,35 @@ button {
     font-weight: bold;
     font-size: 17px;
 }
+.menu-item-add {
+	padding-left:20px;
+}
 
 .price {
     font-size: 13px;
 }
+.menu-item-add {
+    margin:10px;
+}
+
+.menu-item-add-icon {
+    width: 15px;
+    height: 15px;
+    margin-right: 3px;
+    background-size: contain;
+    margin-top:10px;
+    
+}
+
+.menu-item-add-text {
+    color: #4F709C;
+    font-size: 15px;
+    font-family: 'Noto Sans', sans-serif;
+    font-weight: 700;
+	padding-bottom:5px;
+	margin-left:7px;
+}
+
 .quantity {
     margin: 10px 0;
 }
