--- a/src/main/webapp/CSS/SHpage.css
+++ b/src/main/webapp/CSS/SHpage.css
@@ -75,6 +75,10 @@
     height: 20px;
     margin: 0 10px;
 }
+#basketCount {
+	padding-left: 5px;
+	background-color:#4F709C;
+}
 .divider1 {
   width: 100%;
   height: 1px;
@@ -159,7 +163,7 @@ button {
     font-size: 13px;
 }
 .menu-item-add {
-    padding-left: 100px;
+    padding-left: 120px;
 }
 
 .menu-item-add-icon {
@@ -177,7 +181,7 @@ button {
     font-family: 'Noto Sans', sans-serif;
     font-weight: 700;
 	padding-bottom:5px;
-	margin-left:7px;
+	margin-left:3px;
 }
 
 .quantity {
