명신관 각 메뉴 페이지

--- a/src/main/webapp/CSS/SHpage.css
+++ b/src/main/webapp/CSS/SHpage.css
@@ -76,8 +76,9 @@
     margin: 0 10px;
 }
 #basketCount {
-	padding-left: 5px;
+	padding-left: 3px;
 	background-color:#4F709C;
+	color: white;
 }
 .divider1 {
   width: 100%;
