--- a/src/main/webapp/CSS/MSpage.css
+++ b/src/main/webapp/CSS/MSpage.css
@@ -5,11 +5,21 @@
 }
 
 .category {
+	list-style: none;
     padding-top: 30px;
     padding-left: 15%;
     display: flex;
     gap: 20px;
     flex-wrap: wrap;
+}
+.category li{
+	list-style: none;
+	display: flex;
+}
+.category a{
+	color: black;
+  	text-decoration: none;
+  	transition: color 0.3s;
 }
 .menu-item {
     font-size: 16px;
@@ -102,7 +112,7 @@
     font-family: 'Noto Sans', sans-serif;
     font-weight: 500;
     word-wrap: break-word;
-    width: 70%;
+    width: 25%;
 }
 
 .menu-item-add-container {
