--- a/src/main/webapp/css/MSpage.css
+++ b/src/main/webapp/css/MSpage.css
@@ -178,7 +178,8 @@ button {
 }
 .modal {
 	display: none;
-    position: fixed; /* 변경된 부분 */
+    position: fixed;
+    z-index: 1500; /* 변경된 부분 */
     top: 50%; /* 수직 중앙 정렬 */
     left: 40%; /* 수평 중앙 정렬 */  
     width:300px;  
@@ -199,6 +200,7 @@ button {
     width: 80%;
     max-width: 500px;
     border-radius: 5px;
+    z-index: 1501;
 }
 
 .close {
