--- a/src/main/webapp/css/cart.css
+++ b/src/main/webapp/css/cart.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 body {
+	width : 100%;
+	height : 100%;
     font-family: 'Noto Sans', sans-serif;
     background-color: white;
     margin: 0;
